<resources>
    <string name="app_name">Crop Management</string>
    <string name="please_enter_mobile_number_for_otp_verification">Please Enter Mobile Number for OTP Verification</string>
    <string name="login">Login</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="please_enter_otp">Please Enter Otp</string>
    <string name="in_how_much_area_you_are_growing_crop">In How much area you are growing crop ?</string>
    <string name="which_crop_you_are_growing">Which Crop You are growing</string>
    <string name="add_crop">ADD CROP</string>
    <string name="enter_showing_date">Enter Showing Date</string>
    <string name="select_date">Select Date</string>
    <string name="when_has_the_crop_been_sown">When has the Crop been sown ?</string>
    <string name="enter_farm_area_in_acres">Enter Farm Area(in Acres)</string>

    <string-array name="crops">
        <item>Cotton</item>
        <item>Wheat</item>
        <item>Onion</item>
    </string-array>
    <string name="title_activity_admin_login">AdminLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="get_otp">GET OTP</string>
    <string name="add_event_for_crop">Add Event for Crop</string>
    <string name="crop_name">Crop Name:</string>
    <string name="day">Day </string>
    <string name="title">Title </string>
    <string name="details">Details</string>
    <string name="add_details">Add Details</string>
    <string name="crop_schedule">CROP SCHEDULE</string>
    <string name="your_crops">YOUR CROPS</string>
    <string name="in_which_farm_crop_is_sown">In Which Farm Crop is Sown?</string>
    <string name="logout">Logout</string>
    <string name="add_subsidy">ADD SUBSIDY</string>
    <string name="subsidy_title">Subsidy Title</string>
    <string name="details_about_subsidy">Details About Subsidy</string>
    <string name="procedure_to_apply">Procedure to Apply</string>
    <string name="home">HOME</string>
    <string name="add_subsidy_">Add Subsidy</string>
    <string name="add_event">ADD EVENT</string>
    <string name="enter_farm_area">Enter Farm Area(in Acres)</string>
    <string name="subsidies">SUBSIDIES</string>
    <string name="didn_t_receive_otp">Didn\'t Receive OTP ?</string>
    <string name="resend_otp_again">RESEND OTP AGAIN</string>
    <string name="submit">Submit</string>
    <string name="otp_is_sent_to">Otp is sent to</string>
    <string name="welcome_to_farmer_friend">Welcome to Farmer Friend</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91">+91</string>
    <string name="add_crop_event">Add Crop Event</string>
    <string name="admin_login">Admin Login</string>
    <string name="userid">UserId</string>
    <string name="enter_procedure">Enter Procedure</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_title">Enter Title</string>
    <string name="details_">Details About Subsidy</string>
    <string name="enter_farm_name">Enter Farm Name</string>
    <string name="link_for_subsidy">Link for Subsidy</string>


</resources>