<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3"
    tools:context=".add_subsidy_admin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"
            android:onClick="RedirectAdminHome"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_subsidy"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/exo2"
            android:textSize="30sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="480sp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_marginHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:padding="10sp"
            android:gravity="center"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/subsidy_title" />
        <EditText
            android:id="@+id/subsidy_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_gravity="center"
            android:fontFamily="@font/ptserifregular"
            android:background="@drawable/rectangle"
            android:hint="@string/enter_title"
            android:paddingHorizontal="15sp"
            android:padding="10sp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30sp"
        android:layout_height="130sp"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:textSize="25sp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/details_about_subsidy" />
        <EditText
            android:id="@+id/subsidy_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/ptserifregular"
            android:hint="@string/enter_details"
            android:paddingHorizontal="15sp"
            android:padding="10sp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:orientation="vertical"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:textSize="25sp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/procedure_to_apply" />
        <EditText
            android:id="@+id/subsidy_procedure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/ptserifregular"
            android:layout_gravity="center"
            android:scrollbars="vertical"
            android:hint="@string/enter_procedure"
            android:paddingHorizontal="15sp"
            android:padding="10sp"
            android:textSize="20sp"/>

    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/addSubsidy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60sp"
        android:background="@drawable/blackround_rectangle"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        android:text="@string/add_subsidy"/>

</LinearLayout>