<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3"
    tools:context=".add_crop_event_admin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"
            android:onClick="RedirectAdminHome"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event_for_crop"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/exo2"
        android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="30sp"
        android:background="@drawable/rectangle"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            android:textSize="20sp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/crop_name" />
        <Spinner
            android:id="@+id/crop_spinner_admin"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="30sp"
        android:background="@drawable/rectangle"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            android:textSize="20sp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/day" />
        <EditText
            android:id="@+id/s_day"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="30sp"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            android:textSize="20sp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/title" />
        <EditText
            android:id="@+id/s_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="30sp"
        android:background="@drawable/rectangle"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            android:textSize="20sp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/details" />

        <EditText
            android:id="@+id/s_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textMultiLine"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/addDetailsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        android:fontFamily="@font/exo2"
        android:textStyle="bold"
        android:background="@drawable/blackround_rectangle"
        android:text="@string/add_details"/>

</LinearLayout>