<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".authpage1"
    android:background="@drawable/bg1"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_sendotp"
            android:layout_width="377dp"
            android:layout_height="95dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/loginicon"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/login" />

        <TextView
            android:id="@+id/EnterMobileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_mobile_number_for_otp_verification"
            android:textAlignment="center"
            android:layout_marginTop="70sp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="7dp"
            android:paddingVertical="7sp"
            android:background="@drawable/white_rectangle">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="+91"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/input_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="Mobile Number"
                android:textAlignment="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:focusedByDefault="true"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/getotp_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/white_rectangle"
                android:textColor="@color/white"
                android:text="@string/get_otp"
                android:layout_margin="60dp"
                android:textStyle="bold"
                android:paddingHorizontal="20sp"
                android:textSize="20sp" />
            
            <ProgressBar
                android:id="@+id/progressbar_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone">

            </ProgressBar>


        </FrameLayout>

        <Button
            android:id="@+id/adminlogin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:layout_marginTop="80sp"
            android:textStyle="bold"
            android:alpha="0.9"
            android:background="@drawable/rectangle"
            android:padding="10sp"
            android:textSize="20sp" />


    </LinearLayout>

</ScrollView>